Revision history for String-Flogger

{{$NEXT}}

1.101170  2010-04-27 14:59:36 America/New_York
          fix a typo in docs (thanks MJD)

1.001     2008-10-14
          crank up the JSON prereq (thanks, alexchorny, for the test report)

1.000     2008-10-13
          first release